--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 items-center justify-center">
                 <div>
                     <!-- Image beside the card -->
-                    <img src="image2.jpg" alt="Profile Image" class="mr-0 w-[100%] max-w-sm min-w-md [20px] mt-[100px] mx-[50px] rounded-full">
+                    <img src="image2.jpg" alt="Profile Image" class="mr-0 w-[100%] max-w-sm min-w-md [20px] mt-[100px] mx-auto rounded-full">
                 </div>
                     
                 <div class=" bg-white shadow-lg rounded-lg max-w-sm p-12 hover-effect h-48">
